<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20pt"
            android:layout_column="0"
            android:layout_span="2" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="@string/seunome" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorNorwegianBlue"
            android:text="@string/seusobrenome" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:layout_span="2" />
    </TableRow>
</TableLayout>
