<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20pt"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackStories"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/seunome"
        android:textAlignment="center"
        android:padding="20dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorNightlyBuilds"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/seusobrenome"
        android:textAlignment="center"
        android:padding="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/Ok"
        />
</GridLayout>