<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.luttos.exercicio_1.CardActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/belgica"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Belgica"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textSize="14pt"
                android:padding="30dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/argentina"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Argentina"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:textSize="14pt"
                android:padding="30dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/brasil"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Brasil"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textSize="14pt"
                android:padding="30dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/franca"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Franca"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textSize="14pt"
                android:padding="30dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/italia"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Italia"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textSize="14pt"
                android:padding="30dp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
